test/classes/errors/nilability-assign/assign-oknil-unmanaged-from-nonnil-owned.good
assign-oknil-unmanaged-from-nonnil-owned.chpl:8: error: Cannot assign to unmanaged MyClass? from owned MyClass
